public/css/admin.css
/*--------------- MAILING LISTS -----------------*/
h3 {
	font-family: "Source Code Pro", monospace;
}

.mailing-header {
	padding-top: 130px;
	width: 25%;
}

.description {
	font-size: 18px;
	margin-top: 10px;
}

.mailing-wrapper {
	padding: 20px 0 50px;
}

.mailing-list {
	display: flex;
}

.row {
	margin: auto;
	width: 90vw;
}

/* Clear floats after the columns */
.row:after {
	content: "";
	display: table;
	clear: both;
}

.column {
	position: relative;
	text-align: center;

	background-color: white; /*backup*/
	float: left;
	width: calc(25% - 2vw);
	margin: 0 1vw;
	border-radius: 1rem;
}

/* Different color for each mailing list */
.column:nth-child(1) {
	background-color: #50b5dd !important;
}
.column:nth-child(2) {
	background-color: #bddebb !important;
}
.column:nth-child(3) {
	background-color: #e8cc83 !important;
}
.column:nth-child(4) {
	background-color: #eab664 !important;
}

.mailing-list .mailing-type {
	text-align: center;
}

.mailing-list .mailing-address-container {
	background-color: #ffe195;
	margin: 8%;
	border-radius: 1rem;
	overflow: auto;
}

.glyphicon {
	background: transparent;
	text-shadow: none;
	border: none;
	font-size: 2rem;
	margin: 5px;
}

.mailing-list .mailing-address-container .mailing-address-list {
	background-color: white;
	overflow: auto;
	height: 35vh;
	padding: 0.5rem;
	border: none;
}

/* Responsive layout */
@media (max-width: 990px) {
	.mailing-header {
		width: 248px;
	}
}

@media screen and (max-width: 720px) {
	.column {
		float: center;
		width: 100%;
		margin: calc(7.5px + 1.25vw) 0;
	}
	.description-wrapper {
		margin: auto;
		max-width: 80%;
	}
}

